// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Kicking spammer Does not kick admin roles 1`] = `[Error: Bot attempting to Kick an admin user.]`;

exports[`Kicking spammer Kicked spammer info is logged in moderation channel 1`] = `
{
  "embeds": [
    {
      "author": {
        "icon_url": "image.jpg",
        "name": "Kick | bad.spammer",
      },
      "color": 15747399,
      "fields": [
        {
          "inline": true,
          "name": "User",
          "value": "<@123>",
        },
        {
          "inline": true,
          "name": "Reason",
          "value": "User has been kicked for posting 3 attachments in a single message repeatedly. The limit is currently 1.",
        },
      ],
      "footer": {
        "text": "ID: 123",
      },
      "timestamp": "2024-02-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`Kicking spammer Kicked spammer is informed about the kick in DM 1`] = `
"You have been kicked from the Odin Project Discord server for 3 attachments in short succession. If this account is compromised, please follow the steps linked in this [Discord support article about securing your account](https://support.discord.com/hc/en-us/articles/24160905919511-My-Discord-Account-was-Hacked-or-Compromised). Once your account is secure, feel free to rejoin the server.
The message that was deleted was:"
`;

exports[`Kicking spammer Kicks spammer even if their DM is disabled 1`] = `"Attachments spam, account flagged for being compromised"`;

exports[`Kicking spammer Kicks spammer service kicks with correct message 1`] = `"Attachments spam, account flagged for being compromised"`;

exports[`Warning spammer Does not warn admin roles 1`] = `[Error: Bot attempting to warn an admin user.]`;

exports[`Warning spammer Warned spammer is informed about the warning in DM 1`] = `
"You have been warned in the Odin Project Discord server for sending 3 attachments in a single message. The current limit is 1. If you do this again, you will be kicked. If your account has been compromised, please follow the steps in this [Discord support article about securing your account](https://support.discord.com/hc/en-us/articles/24160905919511-My-Discord-Account-was-Hacked-or-Compromised).
The message that was deleted was:"
`;

exports[`Warning spammer Warning is logged in moderation channel 1`] = `
{
  "embeds": [
    {
      "author": {
        "icon_url": "image.jpg",
        "name": "Warning | bad.spammer",
      },
      "color": 16776960,
      "fields": [
        {
          "inline": true,
          "name": "User",
          "value": "<@123>",
        },
        {
          "inline": true,
          "name": "Reason",
          "value": "User has been warned for posting 3 attachments single message. The limit is currently 1. Next offense will result in a kick.",
        },
      ],
      "footer": {
        "text": "ID: 123",
      },
      "timestamp": "2024-02-01T00:00:00.000Z",
    },
  ],
}
`;
